required --add-reads clause added to server monitor launcher